--- a/bin/application/MyScene.fxml
+++ b/bin/application/MyScene.fxml
@@ -7,9 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Box?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="695.0" prefWidth="438.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MyControlleur">
+<AnchorPane fx:id="anchorPane" prefHeight="695.0" prefWidth="438.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MyControlleur">
    <children>
       <Line endX="313.0" layoutX="112.0" layoutY="569.0" startX="-100.0" />
       <Label layoutX="174.0" layoutY="545.0" text="Information" />
@@ -18,14 +17,13 @@
             <Image url="@home.png" />
          </image>
       </ImageView>
-      <Rectangle fx:id="trace" arcHeight="5.0" arcWidth="5.0" fill="#1f93ff33" height="20.0" layoutX="2.0" layoutY="430.0" stroke="#00000097" strokeType="INSIDE" width="20.0" />
       <Button fx:id="myButtonGo" layoutX="265.0" layoutY="586.0" mnemonicParsing="false" onAction="#clickButtonGo" prefHeight="25.0" prefWidth="115.0" text="Go !" />
       <Label fx:id="theX" layoutX="77.0" layoutY="598.0" text="theX" />
       <Label fx:id="theY" layoutX="77.0" layoutY="630.0" text="theY" />
       <Button fx:id="myButtonStop" layoutX="265.0" layoutY="635.0" mnemonicParsing="false" onAction="#clickButtonStop" prefHeight="25.0" prefWidth="115.0" text="Stop !" />
-      <Line fx:id="mur1" endX="133.5" endY="177.0" layoutX="121.0" layoutY="173.0" startX="133.5" startY="332.0" stroke="TRANSPARENT" />
-      <Line fx:id="mur2" endX="315.6116943359375" endY="332.0" layoutX="122.0" layoutY="14.0" startX="133.5" startY="332.0" stroke="TRANSPARENT" />
-      <Line fx:id="mur3" endX="247.0" endY="332.0" layoutX="-124.0" layoutY="130.0" startX="133.5" startY="332.0" stroke="TRANSPARENT" />
+      <Line fx:id="mur1" endX="252.0" endY="501.0" startX="252.0" startY="340.0" />
+      <Line fx:id="mur2" cache="true" endX="315.6116943359375" endY="332.0" layoutX="119.0" layoutY="4.0" startX="133.5" startY="332.0" />
       <Box fx:id="aspi" cullFace="FRONT" depth="100.0" height="20.0" layoutX="19.0" layoutY="440.0" width="20.0" />
+      <Line fx:id="trace" endX="-84.0" layoutX="111.0" layoutY="440.0" startX="-100.0" />
    </children>
 </AnchorPane>
