--- a/src/application/MyScene.fxml
+++ b/src/application/MyScene.fxml
@@ -21,71 +21,71 @@
       <Label fx:id="theX" layoutX="77.0" layoutY="466.0" text="theX" />
       <Label fx:id="theY" layoutX="77.0" layoutY="500.0" text="theY" />
       <Button fx:id="myButtonStop" layoutX="265.0" layoutY="505.0" mnemonicParsing="false" onAction="#clickButtonStop" prefHeight="25.0" prefWidth="115.0" text="Stop !" />
-      <Line fx:id="mur1" endX="341.5" endY="169.0" startX="214.0" startY="169.0" />
-      <Line fx:id="mur2" cache="true" endX="456.0" endY="352.0" startX="263.5" startY="352.0" />
-      <Box fx:id="aspi" cullFace="FRONT" depth="100.0" height="20.0" layoutX="409.0" layoutY="216.0" width="20.0" />
-      <Line fx:id="mur5" endX="456.0" endY="168.7928924560547" startX="382.5" startY="168.7928924560547" />
-      <Line fx:id="mur3" endX="338.29290771484375" endY="161.0" startX="213.0" startY="161.0" />
-      <Line fx:id="mur11" endX="212.5" endY="113.0" startX="95.5" startY="113.0" />
-      <Line fx:id="mur10" endX="212.0" endY="100.0" startX="92.0" startY="100.0" />
-      <Line fx:id="mur8" endX="61.0" endY="100.0" startX="1.0" startY="100.0" />
-      <Line fx:id="mur9" endX="44.5" endY="189.0" startX="1.0" startY="189.0" />
-      <Line fx:id="mur13" endX="61.0" endY="113.0" startX="1.0" startY="113.0" />
-      <Line fx:id="mur14" endX="61.5" endY="111.0" startX="61.5" startY="99.0" />
-      <Line fx:id="mur12" endX="93.5" endY="114.0" startX="93.5" startY="99.0" />
-      <Line fx:id="mur58" endX="2.0" endY="100.0" startX="2.0" startY="62.0" />
-      <Line fx:id="mur4" cache="true" endX="263.5" endY="362.46551513671875" startX="263.5" startY="352.0" />
-      <Line fx:id="mur6" endX="421.0" endY="161.0" startX="381.0" startY="161.0" />
-      <Line fx:id="mur61" endX="419.5" endY="134.00001525878906" startX="456.0" startY="134.0" />
-      <Line fx:id="mur7" endX="456.5" endY="352.0" startX="456.5" startY="70.79289245605469" />
-      <Line fx:id="mur15" endX="222.5" endY="130.0" startX="222.5" />
-      <Line fx:id="mur16" endX="296.5" endY="34.29289245605469" startX="296.5" />
-      <Line fx:id="mur17" endX="296.0" startX="223.0" />
-      <Line fx:id="mur18" endX="420.5" endY="160.99998474121094" startX="420.5" startY="133.7928924560547" />
-      <Line fx:id="mur19" endX="339.5" endY="35.79289245605469" startX="339.5" />
-      <Line fx:id="mur20" endX="339.5" endY="35.79289245605469" startX="296.5" startY="35.79289245605469" />
-      <Line fx:id="mur21" endX="213.5" endY="98.79289245605469" startX="213.5" startY="53.79289245605469" />
-      <Line fx:id="mur22" cache="true" endX="263.0" endY="362.46551513671875" startX="1.0" startY="362.96551513671875" />
-      <Line fx:id="mur23" cache="true" endX="1.0" endY="362.46551513671875" startX="1.0" startY="68.79289245605469" />
-      <Line fx:id="mur24" endX="214.5" endY="168.0" startX="214.5" startY="160.0" />
-      <Line fx:id="mur25" endX="342.0" endY="169.0" startX="342.0" startY="160.0" />
-      <Line fx:id="mur26" endX="380.5" endY="168.0" startX="380.5" startY="160.0" />
-      <Line fx:id="mur27" endX="214.5" endY="130.0" startX="214.5" startY="111.0" />
-      <Line fx:id="mur28" endX="220.0" endY="130.49998474121094" startX="217.0" startY="130.49998474121094" />
-      <Line fx:id="mur29" endX="424.0" endY="1.0" startX="38.0" startY="1.0" />
-      <Line fx:id="mur30" endX="36.5" endY="70.79289245605469" startX="1.5" startY="70.79289245605469" />
-      <Line fx:id="mur31" endX="36.5" endY="70.79289245605469" startX="36.5" startY="0.7928924560546875" />
-      <Line fx:id="mur32" endX="417.5" endY="71.79289245605469" startX="417.5" startY="0.4999847412109375" />
-      <Line fx:id="mur33" endX="417.5" endY="71.79289245605469" startX="456.0" startY="71.79290771484375" />
-      <Line fx:id="mur34" endX="342.5" endY="82.79289245605469" startX="299.5" startY="82.79289245605469" />
-      <Line fx:id="mur35" endX="299.5" endY="108.79289245605469" startX="299.5" startY="82.79289245605469" />
-      <Line fx:id="mur36" endX="343.0" endY="107.79289245605469" startX="343.0" startY="83.29289245605469" />
-      <Line fx:id="mur37" endX="343.0" endY="107.79289245605469" startX="298.5" startY="107.79289245605469" />
-      <Line fx:id="mur38" endX="46.5" endY="233.5" startX="46.5" startY="190.0" />
-      <Line fx:id="mur39" endX="29.5" endY="291.79290771484375" startX="29.5" startY="248.7928924560547" />
-      <Line fx:id="mur40" endX="102.0" endY="317.0" startX="56.0" startY="317.0" />
-      <Line fx:id="mur41" endX="114.5" endY="343.79290771484375" startX="114.5" startY="311.79290771484375" />
-      <Line fx:id="mur42" endX="114.5" endY="343.79290771484375" startX="1.0" startY="343.79290771484375" />
-      <Line fx:id="mur43" endX="115.0" endY="310.79290771484375" startX="103.0" startY="310.79290771484375" />
+      <Box fx:id="aspi" cullFace="FRONT" depth="100.0" height="20.0" layoutX="58.0" layoutY="286.0" width="20.0" />
+      <Line fx:id="mur1" endX="340.0" endY="171.0" opacity="0.0" startX="213.0" startY="171.0" />
+      <Line fx:id="mur2" cache="true" endX="456.0" endY="351.0" opacity="0.0" startX="262.0" startY="351.0" />
+      <Line fx:id="mur5" endX="456.0" endY="171.0" opacity="0.0" startX="381.0" startY="171.0" />
+      <Line fx:id="mur3" endX="340.0" endY="160.0" opacity="0.0" startX="213.0" startY="160.0" />
+      <Line fx:id="mur11" endX="213.0" endY="112.0" opacity="0.0" startX="93.5" startY="112.0" />
+      <Line fx:id="mur10" endX="213.0" endY="100.0" opacity="0.0" startX="93.5" startY="100.0" />
+      <Line fx:id="mur8" endX="61.0" endY="100.0" opacity="0.0" startX="1.0" startY="100.0" />
+      <Line fx:id="mur9" endX="44.5" endY="189.0" opacity="0.0" startX="1.0" startY="189.0" />
+      <Line fx:id="mur13" endX="61.0" endY="112.0" opacity="0.0" startX="1.0" startY="112.0" />
+      <Line fx:id="mur14" endX="61.0" endY="112.0" opacity="0.0" startX="61.0" startY="100.0" />
+      <Line fx:id="mur12" endX="93.5" endY="112.0" opacity="0.0" startX="93.5" startY="100.0" />
+      <Line fx:id="mur4" cache="true" endX="262.0" endY="362.46551513671875" opacity="0.0" startX="262.0" startY="352.0" />
+      <Line fx:id="mur6" endX="421.0" endY="160.0" opacity="0.0" startX="381.0" startY="160.0" />
+      <Line fx:id="mur61" endX="456.0" endY="134.00001525878906" opacity="0.0" startX="419.5" startY="134.0" />
+      <Line fx:id="mur7" endX="456.5" endY="352.0" opacity="0.0" startX="456.5" startY="71.0" />
+      <Line fx:id="mur15" endX="224.0" endY="130.0" opacity="0.0" startX="224.0" />
+      <Line fx:id="mur16" endX="296.5" endY="35.0" opacity="0.0" startX="296.5" />
+      <Line fx:id="mur18" endX="420.5" endY="160.0" opacity="0.0" startX="420.5" startY="133.7928924560547" />
+      <Line fx:id="mur19" endX="340.0" endY="35.79289245605469" opacity="0.0" startX="340.0" />
+      <Line fx:id="mur20" endX="339.5" endY="35.79289245605469" opacity="0.0" startX="296.5" startY="35.79289245605469" />
+      <Line fx:id="mur21" endX="213.5" endY="100.0" opacity="0.0" startX="213.5" startY="56.0" />
+      <Line fx:id="mur22" cache="true" endX="263.0" endY="362.46551513671875" opacity="0.0" startX="1.0" startY="362.96551513671875" />
+      <Line fx:id="mur23" cache="true" endX="1.0" endY="362.46551513671875" opacity="0.0" startX="1.0" startY="68.79289245605469" />
+      <Line fx:id="mur24" endX="213.0" endY="171.0" opacity="0.0" startX="213.0" startY="160.0" />
+      <Line fx:id="mur25" endX="340.0" endY="171.0" opacity="0.0" startX="340.0" startY="160.0" />
+      <Line fx:id="mur26" endX="380.5" endY="171.0" opacity="0.0" startX="380.5" startY="160.0" />
+      <Line fx:id="mur27" endX="213.0" endY="130.0" opacity="0.0" startX="213.0" startY="113.0" />
+      <Line fx:id="mur28" endX="224.0" endY="130.0" opacity="0.0" startX="213.0" startY="130.0" />
+      <Line fx:id="mur29" endX="420.75" opacity="0.0" startX="38.0" />
+      <Line fx:id="mur30" endX="36.5" endY="70.79289245605469" opacity="0.0" startX="1.5" startY="70.79289245605469" />
+      <Line fx:id="mur31" endX="38.0" endY="70.79289245605469" opacity="0.0" startX="38.0" startY="0.7928924560546875" />
+      <Line fx:id="mur32" endX="417.5" endY="71.79289245605469" opacity="0.0" startX="417.5" startY="0.4999847412109375" />
+      <Line fx:id="mur33" endX="456.0" endY="71.79289245605469" opacity="0.0" startX="417.5" startY="71.79290771484375" />
+      <Line fx:id="mur34" endX="342.5" endY="82.0" opacity="0.0" startX="298.0" startY="82.0" />
+      <Line fx:id="mur35" endX="298.0" endY="107.5" opacity="0.0" startX="298.0" startY="82.79289245605469" />
+      <Line fx:id="mur36" endX="343.0" endY="107.79289245605469" opacity="0.0" startX="343.0" startY="82.0" />
+      <Line fx:id="mur37" endX="343.0" endY="108.0" opacity="0.0" startX="298.5" startY="108.0" />
+      <Line fx:id="mur38" endX="44.5" endY="233.5" opacity="0.0" startX="44.5" startY="190.0" />
+      <Line fx:id="mur39" endX="29.5" endY="295.0" opacity="0.0" startX="29.5" startY="248.7928924560547" />
+      <Line fx:id="mur40" endX="102.0" endY="317.0" opacity="0.0" startX="56.0" startY="317.0" />
+      <Line fx:id="mur41" endX="115.0" endY="343.0" opacity="0.0" startX="115.0" startY="309.0" />
+      <Line fx:id="mur42" endX="114.5" endY="343.0" opacity="0.0" startX="1.0" startY="343.0" />
+      <Line fx:id="mur43" endX="115.0" endY="309.0" opacity="0.0" startX="103.0" startY="309.0" />
 
-      <Line fx:id="mur44" endX="45.0" endY="299.79290771484375" layoutX="10.0" layoutY="10.0" startX="28.5" startY="299.79290771484375" />
-      <Line fx:id="mur45" endX="36.5" endY="245.7928924560547" startX="36.5" startY="233.0" />
-      <Line fx:id="mur59" endX="37.5" endY="308.79290771484375" startX="37.5" startY="297.79290771484375" />
-      <Line fx:id="mur46" endX="88.5" endY="52.79289245605469" startX="88.5" startY="1.5" />
-      <Line fx:id="mur47" endX="125.0" endY="52.79289245605469" startX="125.0" startY="1.5" />
-      <Line fx:id="mur48" endX="125.0" endY="52.79289245605469" startX="90.5" startY="52.79289245605469" />
-      <Line fx:id="mur49" endX="180.0" endY="52.79289245605469" startX="180.0" startY="1.5" />
-      <Line fx:id="mur60" endX="215.0" endY="54.0" startX="180.0" startY="54.0" />
-      <Line fx:id="mur51" endX="129.5" endY="256.79290771484375" startX="165.5" startY="256.79290771484375" />
-      <Line fx:id="mur50" endX="129.5" endY="285.0" startX="165.5" startY="285.0" />
-      <Line fx:id="mur53" endX="130.5" endY="283.79290771484375" startX="130.5" startY="255.7928924560547" />
-      <Line fx:id="mur52" endX="166.5" endY="285.79290771484375" startX="166.5" startY="256.79290771484375" />
-      <Line fx:id="mur54" endX="398.0" endY="246.7928924560547" startX="289.0" startY="246.7928924560547" />
-      <Line fx:id="mur55" endX="398.0" endY="288.0" startX="289.0" startY="288.0" />
-      <Line fx:id="mur56" endX="399.0" endY="286.0" startX="399.0" startY="247.0" />
-      <Line fx:id="mur57" endX="288.0" endY="285.79290771484375" startX="288.0" startY="247.7928924560547" />
-      <Line fx:id="mur80" endX="45.0" endY="234.5" startX="28.0" startY="234.5" />
-      <Line fx:id="mur81" endX="102.5" endY="317.0" startX="102.5" startY="312.0" />
-      <Line fx:id="mur82" endX="55.5" endY="318.0" startX="55.5" startY="311.0" />
+      <Line fx:id="mur44" endX="45.0" endY="299.79290771484375" layoutX="10.0" layoutY="10.0" opacity="0.0" startX="28.5" startY="299.79290771484375" />
+      <Line fx:id="mur45" endX="38.0" endY="248.0" opacity="0.0" startX="38.0" startY="234.5" />
+      <Line fx:id="mur59" endX="38.0" endY="308.79290771484375" opacity="0.0" startX="38.0" startY="295.0" />
+      <Line fx:id="mur46" endX="90.5" endY="52.79289245605469" opacity="0.0" startX="90.5" startY="1.5" />
+      <Line fx:id="mur47" endX="125.0" endY="52.79289245605469" opacity="0.0" startX="125.0" startY="1.5" />
+      <Line fx:id="mur48" endX="125.0" endY="52.79289245605469" opacity="0.0" startX="90.5" startY="52.79289245605469" />
+      <Line fx:id="mur49" endX="180.0" endY="56.0" opacity="0.0" startX="180.0" startY="1.5" />
+      <Line fx:id="mur60" endX="213.0" endY="56.0" opacity="0.0" startX="180.0" startY="56.0" />
+      <Line fx:id="mur51" endX="166.5" endY="256.79290771484375" opacity="0.0" startX="129.5" startY="256.79290771484375" />
+      <Line fx:id="mur50" endX="166.5" endY="286.0" opacity="0.0" startX="129.5" startY="286.0" />
+      <Line fx:id="mur53" endX="129.5" endY="286.0" opacity="0.0" startX="129.5" startY="256.7928924560547" />
+      <Line fx:id="mur52" endX="167.0" endY="286.0" opacity="0.0" startX="167.0" startY="256.79290771484375" />
+      <Line fx:id="mur54" endX="401.0" endY="245.0" opacity="0.0" startX="288.0" startY="245.0" />
+      <Line fx:id="mur55" endX="401.0" endY="298.0" opacity="0.0" startX="288.0" startY="298.0" />
+      <Line fx:id="mur56" endX="401.0" endY="298.0" opacity="0.0" startX="401.0" startY="245.0" />
+      <Line fx:id="mur57" endX="288.0" endY="298.0" opacity="0.0" startX="288.0" startY="245.0" />
+      <Line fx:id="mur80" endX="44.5" endY="234.5" opacity="0.0" startX="38.0" startY="234.5" />
+      <Line fx:id="mur81" endX="102.5" endY="317.0" opacity="0.0" startX="102.5" startY="309.0" />
+      <Line fx:id="mur82" endX="55.5" endY="317.0" opacity="0.0" startX="55.5" startY="310.0" />
+      <Line fx:id="mur801" endX="38.0" endY="248.0" opacity="0.0" startX="29.5" startY="248.0" />
+      <Line fx:id="mur8011" endX="38.0" endY="295.0" opacity="0.0" startX="29.5" startY="295.0" />
    </children>
 </AnchorPane>
