--- a/src/application/MyScene1.fxml
+++ b/src/application/MyScene1.fxml
@@ -21,63 +21,63 @@
       <Label fx:id="theX" layoutX="77.0" layoutY="466.0" text="theX" />
       <Label fx:id="theY" layoutX="77.0" layoutY="500.0" text="theY" />
       <Button fx:id="myButtonStop" layoutX="265.0" layoutY="505.0" mnemonicParsing="false" onAction="#clickButtonStop" prefHeight="25.0" prefWidth="115.0" text="Stop !" />
-      <Box fx:id="aspi" cullFace="FRONT" depth="100.0" height="20.0" layoutX="252.0" layoutY="25.0" width="20.0" />
-      <Line fx:id="mur5" endX="443.0" endY="10.0" opacity="0.0" startX="13.25" startY="10.0" />
-      <Line fx:id="mur2" cache="true" endX="444.25" endY="323.0" opacity="0.0" startX="88.0" startY="323.0" />
-      <Line fx:id="mur1" cache="true" endX="358.0" endY="236.25" opacity="0.0" startX="12.75" startY="236.25" />
-      <Line fx:id="mur3" cache="true" endX="358.0" endY="226.0" opacity="0.0" startX="12.0" startY="226.0" />
-      <Line fx:id="mur4" cache="true" endX="223.75" endY="126.0" opacity="0.0" startX="11.792900085449219" startY="125.99999237060547" />
-      <Line fx:id="mur6" endX="417.25" endY="167.0" opacity="0.0" startX="316.0" startY="167.0" />
-      <Line fx:id="mur7" endX="417.0" endY="157.0" opacity="0.0" startX="327.0" startY="157.0" />
-      <Line fx:id="mur8" endX="444.5" endY="41.25" opacity="0.0" startX="415.75" startY="41.25000762939453" />
-      <Line fx:id="mur9" endX="399.0" endY="99.75" opacity="0.0" startX="345.25" startY="99.49999237060547" />
-      <Line fx:id="mur10" cache="true" endX="178.25" endY="159.0" opacity="0.0" startX="36.5" startY="159.0" />
-      <Line fx:id="mur11" cache="true" endX="198.75" endY="39.75000762939453" opacity="0.0" startX="126.0" startY="39.75" />
-      <Line fx:id="mur12" cache="true" endX="170.0" endY="68.49999237060547" opacity="0.0" startX="144.0" startY="68.5" />
-      <Line fx:id="mur13" cache="true" endX="171.0" endY="68.49999237060547" opacity="0.0" startX="143.5" startY="68.5" />
-      <Line fx:id="mur14" cache="true" endX="171.0" endY="105.49999237060547" opacity="0.0" startX="143.5" startY="105.49999237060547" />
-      <Line fx:id="mur15" cache="true" endX="35.5" endY="189.75" opacity="0.0" startX="13.5" startY="189.75" />
-      <Line fx:id="mur16" cache="true" endX="223.25" endY="168.75" opacity="0.0" startX="201.75" startY="168.75" />
-      <Line fx:id="mur17" cache="true" endX="201.0" endY="174.5" opacity="0.0" startX="177.75" startY="174.5" />
-      <Line fx:id="mur18" cache="true" endX="43.0" endY="251.75" opacity="0.0" startX="12.75" startY="251.75" />
-      <Line fx:id="mur19" cache="true" endX="138.0" endY="251.75" opacity="0.0" startX="93.25" startY="251.75" />
-      <Line fx:id="mur20" cache="true" endX="220.0" endY="251.75" opacity="0.0" startX="176.0" startY="251.75" />
-      <Line fx:id="mur201" cache="true" endX="311.0" endY="251.75" opacity="0.0" startX="266.0" startY="251.75" />
-      <Line fx:id="mur22" cache="true" endX="44.0" endY="323.5" opacity="0.0" startX="44.0" startY="251.75" />
-      <Line fx:id="mur23" cache="true" endX="175.25" endY="251.75" opacity="0.0" startX="175.25" startY="236.75" />
-      <Line fx:id="mur24" cache="true" endX="139.0" endY="251.8" opacity="0.0" startX="139.0" startY="236.25" />
-      <Line fx:id="mur25" cache="true" endX="93.0" endY="251.75" opacity="0.0" startX="93.0" startY="236.0" />
-      <Line fx:id="mur26" cache="true" endX="220.0" endY="251.0" opacity="0.0" startX="220.0" startY="236.0" />
-      <Line fx:id="mur27" cache="true" endX="265.5" endY="251.25" opacity="0.0" startX="265.5" startY="235.75" />
-      <Line fx:id="mur28" cache="true" endX="311.25" endY="251.5" opacity="0.0" startX="311.25" startY="237.0" />
-      <Line fx:id="mur29" cache="true" endX="263.0" endY="297.0" opacity="0.0" startX="220.0" startY="297.0" />
-      <Line fx:id="mur30" cache="true" endX="356.0" endY="297.0" opacity="0.0" startX="311.5" startY="297.0" />
-      <Line fx:id="mur31" cache="true" endX="174.25" endY="297.0" opacity="0.0" startX="129.25" startY="296.5" />
-      <Line fx:id="mur32" cache="true" endX="90.5" endY="297.0" opacity="0.0" startX="44.5" startY="297.0" />
-      <Line fx:id="mur281" cache="true" endX="311.25" endY="323.25" opacity="0.0" startX="311.25" startY="297.5" />
-      <Line fx:id="mur40" cache="true" endX="357.0" endY="323.0" opacity="0.0" startX="357.0" startY="297.5" />
-      <Line fx:id="mur41" cache="true" endX="263.75" endY="322.25" opacity="0.0" startX="263.75" startY="297.75" />
-      <Line fx:id="mur42" cache="true" endX="219.75" endY="321.75" opacity="0.0" startX="219.75" startY="297.5" />
-      <Line fx:id="mur43" cache="true" endX="174.5" endY="323.0" opacity="0.0" startX="174.5" startY="297.5" />
-      <Line fx:id="mur44" cache="true" endX="91.5" endY="322.75" opacity="0.0" startX="91.5" startY="297.0" />
-      <Line fx:id="mur45" cache="true" endX="129.25" endY="322.5" opacity="0.0" startX="129.25" startY="297.0" />
-      <Line fx:id="mur48" cache="true" endX="358.0" endY="236.0" opacity="0.0" startX="358.0" startY="226.0" />
-      <Line fx:id="mur50" cache="true" endX="444.75" endY="323.0" opacity="0.0" startX="444.0" startY="42.0" />
-      <Line fx:id="mur51" cache="true" endX="417.25" endY="167.0" opacity="0.0" startX="417.25" startY="157.0" />
-      <Line fx:id="mur52" cache="true" endX="327.0" endY="156.0" opacity="0.0" startX="327.0" startY="12.0" />
-      <Line fx:id="mur53" cache="true" endX="315.75" endY="166.75" opacity="0.0" startX="315.75" startY="12.25" />
-      <Line fx:id="mur54" cache="true" endX="345.25" endY="99.0" opacity="0.0" startX="345.25" startY="11.0" />
-      <Line fx:id="mur55" cache="true" endX="399.5" endY="99.75" opacity="0.0" startX="399.5" startY="10.5" />
-      <Line fx:id="mur56" cache="true" endX="415.5" endY="41.0" opacity="0.0" startX="415.5" startY="11.0" />
-      <Line fx:id="mur57" cache="true" endX="199.5" endY="39.75" opacity="0.0" startX="199.5" startY="10.0" />
-      <Line fx:id="mur58" cache="true" endX="125.0" endY="39.8" opacity="0.0" startX="125.0" startY="10.75" />
-      <Line fx:id="mur60" cache="true" endX="12.500007629394531" endY="253.0" opacity="0.0" startX="12.5" startY="10.75" />
-      <Line fx:id="mur61" cache="true" endX="143.5" endY="105.0" opacity="0.0" startX="143.5" startY="68.75" />
-      <Line fx:id="mur62" cache="true" endX="171.0" endY="105.0" opacity="0.0" startX="171.0" startY="69.0" />
-      <Line fx:id="mur63" cache="true" endX="223.75" endY="168.75" opacity="0.0" startX="223.75" startY="126.5" />
-      <Line fx:id="mur64" cache="true" endX="177.75" endY="174.5" opacity="0.0" startX="177.75" startY="159.5" />
-      <Line fx:id="mur641" cache="true" endX="35.5" endY="189.5" opacity="0.0" startX="35.5" startY="158.0" />
-      <Line fx:id="mur642" cache="true" endX="201.25" endY="174.0" opacity="0.0" startX="201.25" startY="168.25" />
+      <Box fx:id="aspi" cullFace="FRONT" depth="100.0" height="20.0" layoutX="419.0" layoutY="208.0" width="20.0" />
+      <Line fx:id="mur5" endX="443.0" endY="10.0" startX="13.25" startY="10.0" />
+      <Line fx:id="mur2" cache="true" endX="444.25" endY="323.0" startX="88.0" startY="323.0" />
+      <Line fx:id="mur1" cache="true" endX="358.0" endY="236.25" startX="12.75" startY="236.25" />
+      <Line fx:id="mur3" cache="true" endX="358.0" endY="226.0" startX="12.0" startY="226.0" />
+      <Line fx:id="mur4" cache="true" endX="223.75" endY="126.0" startX="11.792900085449219" startY="125.99999237060547" />
+      <Line fx:id="mur6" endX="417.25" endY="167.0" startX="316.0" startY="167.0" />
+      <Line fx:id="mur7" endX="417.0" endY="157.0" startX="327.0" startY="157.0" />
+      <Line fx:id="mur8" endX="444.5" endY="41.25" startX="415.75" startY="41.25000762939453" />
+      <Line fx:id="mur9" endX="399.0" endY="99.75" startX="345.25" startY="99.49999237060547" />
+      <Line fx:id="mur10" cache="true" endX="178.25" endY="159.0" startX="36.5" startY="159.0" />
+      <Line fx:id="mur11" cache="true" endX="198.75" endY="39.75000762939453" startX="125.0" startY="39.75" />
+      <Line fx:id="mur12" cache="true" endX="170.0" endY="68.49999237060547" startX="144.0" startY="68.5" />
+      <Line fx:id="mur13" cache="true" endX="171.0" endY="68.49999237060547" startX="143.5" startY="68.5" />
+      <Line fx:id="mur14" cache="true" endX="171.0" endY="105.49999237060547" startX="143.5" startY="105.49999237060547" />
+      <Line fx:id="mur15" cache="true" endX="35.5" endY="189.75" startX="13.5" startY="189.75" />
+      <Line fx:id="mur16" cache="true" endX="223.25" endY="168.75" startX="201.75" startY="168.75" />
+      <Line fx:id="mur17" cache="true" endX="201.0" endY="174.5" startX="177.75" startY="174.5" />
+      <Line fx:id="mur18" cache="true" endX="43.0" endY="251.75" startX="12.75" startY="251.75" />
+      <Line fx:id="mur19" cache="true" endX="139.0" endY="251.75" startX="93.0" startY="251.75" />
+      <Line fx:id="mur20" cache="true" endX="220.0" endY="251.75" startX="176.0" startY="251.75" />
+      <Line fx:id="mur201" cache="true" endX="311.0" endY="251.75" startX="266.0" startY="251.75" />
+      <Line fx:id="mur22" cache="true" endX="44.0" endY="323.5" startX="44.0" startY="236.0" />
+      <Line fx:id="mur23" cache="true" endX="175.25" endY="251.75" startX="175.25" startY="236.75" />
+      <Line fx:id="mur24" cache="true" endX="139.0" endY="251.5" startX="139.0" startY="236.25" />
+      <Line fx:id="mur25" cache="true" endX="93.0" endY="251.75" startX="93.0" startY="236.0" />
+      <Line fx:id="mur26" cache="true" endX="220.0" endY="251.0" startX="220.0" startY="236.0" />
+      <Line fx:id="mur27" cache="true" endX="265.5" endY="251.25" startX="265.5" startY="235.75" />
+      <Line fx:id="mur28" cache="true" endX="311.25" endY="251.5" startX="311.25" startY="237.0" />
+      <Line fx:id="mur29" cache="true" endX="263.0" endY="297.0" startX="220.0" startY="297.0" />
+      <Line fx:id="mur30" cache="true" endX="356.0" endY="297.0" startX="311.5" startY="297.0" />
+      <Line fx:id="mur31" cache="true" endX="174.25" endY="297.0" startX="129.25" startY="296.5" />
+      <Line fx:id="mur32" cache="true" endX="91.5" endY="297.0" startX="44.5" startY="297.0" />
+      <Line fx:id="mur281" cache="true" endX="311.25" endY="323.25" startX="311.25" startY="297.5" />
+      <Line fx:id="mur40" cache="true" endX="357.0" endY="323.0" startX="357.0" startY="297.5" />
+      <Line fx:id="mur41" cache="true" endX="263.75" endY="322.25" startX="263.75" startY="297.75" />
+      <Line fx:id="mur42" cache="true" endX="219.75" endY="321.75" startX="219.75" startY="297.5" />
+      <Line fx:id="mur43" cache="true" endX="174.5" endY="323.0" startX="174.5" startY="297.5" />
+      <Line fx:id="mur44" cache="true" endX="91.5" endY="322.75" startX="91.5" startY="297.0" />
+      <Line fx:id="mur45" cache="true" endX="129.25" endY="322.5" startX="129.25" startY="297.0" />
+      <Line fx:id="mur48" cache="true" endX="358.0" endY="236.0" startX="358.0" startY="226.0" />
+      <Line fx:id="mur50" cache="true" endX="444.75" endY="323.0" startX="444.0" startY="42.0" />
+      <Line fx:id="mur51" cache="true" endX="417.25" endY="167.0" startX="417.25" startY="157.0" />
+      <Line fx:id="mur52" cache="true" endX="327.0" endY="156.0" startX="327.0" startY="12.0" />
+      <Line fx:id="mur53" cache="true" endX="315.75" endY="166.75" startX="315.75" startY="12.25" />
+      <Line fx:id="mur54" cache="true" endX="345.25" endY="99.0" startX="345.25" startY="11.0" />
+      <Line fx:id="mur55" cache="true" endX="399.5" endY="99.75" startX="399.5" startY="10.5" />
+      <Line fx:id="mur56" cache="true" endX="415.5" endY="41.0" startX="415.5" startY="11.0" />
+      <Line fx:id="mur57" cache="true" endX="199.5" endY="39.75" startX="199.5" startY="10.0" />
+      <Line fx:id="mur58" cache="true" endX="125.0" endY="39.8" startX="125.0" startY="10.75" />
+      <Line fx:id="mur60" cache="true" endX="12.500007629394531" endY="253.0" startX="12.5" startY="10.75" />
+      <Line fx:id="mur61" cache="true" endX="143.5" endY="105.0" startX="143.5" startY="68.75" />
+      <Line fx:id="mur62" cache="true" endX="171.0" endY="105.0" startX="171.0" startY="69.0" />
+      <Line fx:id="mur63" cache="true" endX="223.75" endY="168.75" startX="223.75" startY="126.5" />
+      <Line fx:id="mur64" cache="true" endX="177.75" endY="174.5" startX="177.75" startY="159.5" />
+      <Line fx:id="mur641" cache="true" endX="35.5" endY="189.5" startX="35.5" startY="158.0" />
+      <Line fx:id="mur642" cache="true" endX="201.25" endY="174.0" startX="201.25" startY="168.25" />
      
    </children>
 </AnchorPane>
